Trigger 3 added Billing to Shipping address

--- a/ApexTrigger/ApexTriggerUserCases/force-app/main/default/classes/AccountTriggerHandler.cls
+++ b/ApexTrigger/ApexTriggerUserCases/force-app/main/default/classes/AccountTriggerHandler.cls
@@ -4,10 +4,10 @@ public class AccountTriggerHandler
      * Method to Update the Rating when the Industry field 
      * having value equals to ‘Media’ or ‘Energy’ 
      */
-   public static void updateRating(List<Account> accLists)
+   public static void updateRating(List<Account> accList)
    {
          
-          for(Account acc : accLists)
+          for(Account acc : accList)
           {
             if(acc.Industry == 'Media' || acc.Industry == 'Energy')
             {
@@ -16,7 +16,21 @@ public class AccountTriggerHandler
                 acc.Rating = 'Hot';
             }
           }
+   }
 
+   public static void CopyBillingToShipping(List<Account> accList)
+   {
+       for(Account acc : accList)
+       {
+             if(acc.CopyBillingToShipping__c == true)
+             {
+               acc.ShippingCity = acc.BillingCity;
+               acc.ShippingCountry = acc.BillingCountry; 
+               acc.ShippingPostalCode = acc.BillingPostalCode; 
+               acc.ShippingState = acc.BillingState;
+               acc.ShippingStreet = acc.BillingStreet;          
+             }
+       }
    }
 
 }
