--- a/ApexTrigger/ApexTriggerUserCases/force-app/main/default/classes/AccountTriggerHandler.cls
+++ b/ApexTrigger/ApexTriggerUserCases/force-app/main/default/classes/AccountTriggerHandler.cls
@@ -203,4 +203,159 @@ public class AccountTriggerHandler
         Update conList;
    }
 
-}
+
+   Public static void UpdateAccountPhoneToContactSOQL(List<Account> accList, Map<Id,Account> OldAccMap)
+   {
+        List<Contact> conList = new List<Contact>();
+
+        //Map<Id,Account> accToAccountMap = new Map<Id,Account>();
+        Set<id> accIds = new Set<id>();
+
+        for(Account acc : accList)
+        {
+           if(acc.Phone != null && acc.Phone != OldAccMap.get(acc.id).Phone && OldAccMap != null)
+           {
+            // accToAccountMap.put(acc.id,acc);
+               accIds.add(acc.id);
+           }
+        }
+
+       /** if(accToAccountMap.size() > 0)
+      
+        {
+          List<Contact> conListToUpdate = [Select ID, Phone, AccountID From Contact Where AccountID IN : accToAccountMap.keyset()];
+          for(Contact con : conListToUpdate)
+          {
+             if(accToAccountMap.containsKey(con.AccountID))
+             {
+                 con.Phone = accToAccountMap.get(con.AccountID).phone;
+                 conList.add(con);
+             }
+          }
+          */
+
+          //Using Parent to child SOQL
+        
+          for(Account acc : [Select Id, Phone, (Select Phone From Contacts) 
+                             From Account Where ID IN : accIds])
+            {
+              if(acc.contacts != null)
+              {
+                for(Contact con: acc.contacts)
+                {
+                  con.Phone = acc.Phone;
+                  conList.add(con);
+                }
+              }
+
+            }
+
+            if(conList.size() > 0)
+            {
+              Update conList;
+            }
+   
+        }
+
+        Public static void UpdateAccountBillingAddressToContact(List<Account> accList, Map<Id,Account> OldMap)
+        {
+
+          List<Contact> conList = new List<Contact>();
+          Map<ID,Account> accToAccountMap = new Map<ID,Account>();
+
+          for(Account acc : accList)
+          {
+             if(OldMap != null && (acc.BillingCity != OldMap.get(acc.id).BillingCity
+             || acc.BillingCountry != OldMap.get(acc.id).BillingCountry
+             || acc.BillingPostalCode  != OldMap.get(acc.id).BillingPostalCode
+             || acc.BillingState != OldMap.get(acc.id).BillingState
+             || acc.BillingStreet != OldMap.get(acc.id).BillingStreet))
+             {
+                accToAccountMap.put(acc.id,acc);
+             }
+          }
+
+          for(Contact con : [Select ID, AccountID From Contact Where AccountID IN : accToAccountMap.keyset()])
+          {
+                       if(accToAccountMap.containsKey(con.AccountID))
+                       {
+                          con.MailingCity = accToAccountMap.get(con.AccountID).BillingCity;
+                          con.MailingCountry = accToAccountMap.get(con.AccountID).BillingCountry;
+                          con.MailingPostalCode = accToAccountMap.get(con.AccountID).BillingPostalCode;
+                          con.MailingState = accToAccountMap.get(con.AccountID).BillingState;
+                          con.MailingStreet = accToAccountMap.get(con.AccountID).BillingStreet;
+                          
+                       }
+
+                       conList.add(con);
+          }
+
+          if(conList.size() > 0)
+          {
+            Update conList;
+          }
+
+        }
+
+        Public static void UpdateAccountBillingAddressToContactSOQL(List<Account> accList, Map<Id,Account> OldMap)
+        {
+
+          List<Contact> conList = new List<Contact>();
+         // Map<ID,Account> accToAccountMap = new Map<ID,Account>();
+          Set<ID> accids = new Set<ID>();
+
+          for(Account acc : accList)
+          {
+             if(OldMap != null && (acc.BillingCity != OldMap.get(acc.id).BillingCity
+             || acc.BillingCountry != OldMap.get(acc.id).BillingCountry
+             || acc.BillingPostalCode  != OldMap.get(acc.id).BillingPostalCode
+             || acc.BillingState != OldMap.get(acc.id).BillingState
+             || acc.BillingStreet != OldMap.get(acc.id).BillingStreet))
+             {
+                //accToAccountMap.put(acc.id,acc);
+                accids.add(acc.id);
+             }
+          }
+
+          /** 
+          for(Contact con : [Select ID, AccountID From Contact Where AccountID IN : accToAccountMap.keyset()])
+          {
+                       if(accToAccountMap.containsKey(con.AccountID))
+                       {
+                          con.MailingCity = accToAccountMap.get(con.AccountID).BillingCity;
+                          con.MailingCountry = accToAccountMap.get(con.AccountID).BillingCountry;
+                          con.MailingPostalCode = accToAccountMap.get(con.AccountID).BillingPostalCode;
+                          con.MailingState = accToAccountMap.get(con.AccountID).BillingState;
+                          con.MailingStreet = accToAccountMap.get(con.AccountID).BillingStreet;
+                          
+                       }
+
+                       conList.add(con);
+          }
+          */
+
+          for(Account acc : [Select Id, BillingCountry, BillingCity, BillingPostalCode, BillingState, BillingStreet,
+                            (Select ID From Contacts) From Account Where ID IN : accIds])
+                            {
+                              if(acc.Contacts != null)
+                              {
+                                for(Contact con: acc.Contacts)
+                                {
+                                   con.MailingCity = acc.BillingCity;
+                                   con.MailingCountry = acc.BillingCountry;
+                                   con.MailingPostalCode = acc.BillingPostalCode;
+                                   con.MailingState = acc.BillingState;
+                                   con.MailingStreet = acc.BillingStreet;
+                                   conList.add(con);
+                                }
+                              }
+                            }
+
+          if(conList.size() > 0)
+          {
+            Update conList;
+          }
+
+        }
+   }
+
